--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,10 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+#__next {
+  display: flex;
+}
+
 a {
   color: inherit;
   text-decoration: none;
